# AI-Society

./: .dockerignore  .gitignore  COMPLETION_PLAN_final.md  Cargo.toml  Dockerfile  README.md  SOCIAL_FABRIC_ARCHITECTURE.md  docker-compose.yml  index.html  package-lock.json  package.json  project-map.md  society-memory.db
.playwright-cli/: page-2026-03-18T07-54-20-839Z.yml  page-2026-03-18T08-06-00-683Z.yml  page-2026-03-18T08-07-18-459Z.yml  page-2026-03-18T08-07-38-906Z.yml  page-2026-03-18T08-08-10-438Z.yml  page-2026-03-18T08-10-06-528Z.yml  page-2026-03-18T08-10-49-686Z.yml  page-2026-03-18T08-11-09-645Z.yml  page-2026-03-18T08-12-02-029Z.yml  page-2026-03-18T08-12-30-957Z.yml  page-2026-03-18T08-13-11-867Z.yml  page-2026-03-18T08-13-34-556Z.yml  page-2026-03-18T08-14-02-955Z.yml  page-2026-03-18T08-14-16-751Z.yml  page-2026-03-18T08-14-57-232Z.yml  page-2026-03-18T08-15-59-594Z.yml  page-2026-03-18T08-16-44-558Z.yml  page-2026-03-18T08-18-56-181Z.yml  page-2026-03-18T08-22-16-271Z.yml  page-2026-03-18T08-22-49-642Z.yml
docs/: WEBSOCKET_CONTRACTS.md  knowledge.md  plan.md
scripts/: stress_tester.js
society-core/: Cargo.toml
society-core/src/: agent.rs  channels.rs  envelope.rs  events.rs  lib.rs
society-server/: Cargo.toml  Dockerfile
society-server/prompts/: IDENTITY.md  SOUL.md
society-server/src/: agents.rs  analytics.rs  genesis.rs  llm.rs  main.rs  memory.rs  world.rs  ws.rs
src/: App.tsx  index.css
src/components/layout/: LeftSidebar.tsx  TopBar.tsx
src/components/modals/: SeedModal.tsx
src/data/: citizenData.ts  mockData.ts
src/features/analytics/: MarketAnalytics.tsx
src/features/citizens/: CitizenCard.tsx  Citizens.tsx
src/features/inspector/: AgentInspector.tsx  ThoughtLog.tsx
src/features/society-hub/: ChannelList.tsx  ChatFeed.tsx  MessageItem.tsx  SocietyHub.tsx
src/features/world-map/: WorldGraphCanvas.tsx  WorldMap.tsx  WorldMapOverlay.tsx  mapData.ts
src/services/: wsClient.ts
src/store/: useWorldStore.ts
src/types/: world.ts
