[package]
name = "society-server"
version = "0.1.0"
edition = "2021"
description = "Axum-based WebSocket server for ZeroClaw AI Society"

[dependencies]
society-core = { path = "../society-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / WebSocket framework
axum = { version = "0.8", features = ["ws"] }

# Stream utilities for WebSocket split
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Timestamps
chrono = "0.4"

# SQLite memory backend
rusqlite = { version = "0.32", features = ["bundled"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CORS support
tower-http = { version = "0.6", features = ["cors"] }
sysinfo = "0.38.4"

# ZeroClaw agent framework reference:
# VERIFIED: zero-claw v0.1.2 on crates.io is a binary CLI application (src/main.rs),
# NOT an embeddable library crate. It exposes no public traits or API for linking.
# Our agents.rs implements the ZeroClaw architectural patterns directly:
# - Prompt assembly (IDENTITY.md, SOUL.md structure)
# - Provider routing (Elite→Cloud, Citizen→Local)
# - SQLite memory backend with FTS5 hybrid search

[dev-dependencies]
tower = "0.5"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.26"
